k8s/app-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a-service
  labels:
    app: app-a
spec:
  selector:
    app: app-a
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    nodePort: 30080
    protocol: TCP
  - name: metrics
    port: 8080
    targetPort: 8080
    nodePort: 30081
    protocol: TCP
  type: NodePort
